--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -26,6 +26,9 @@
 		<p>
 			<i class="fab fa-facebook-f"></i> {% if artist.facebook_link %}<a href="{{ artist.facebook_link }}" target="_blank">{{ artist.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
         </p>
+		<p>
+			{% if artist.available_from and artist.available_till %}<p>Availble for booking from <b>{{ artist.available_from }} - {{ artist.available_till }} </b></p>{% endif %}
+        </p>
 		{% if artist.seeking_venue %}
 		<div class="seeking">
 			<p class="lead">Currently seeking performance venues</p>
