--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -29,6 +29,14 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
       </div>
       <div class="form-group">
+        <label for="available_from">Available For Shows From</label>
+        {{ form.available_from(class_ = 'form-control', placeholder='HH:MM', autofocus = true, value=artist.available_from) }}
+      </div>
+      <div>
+        <label for="available_till">Available For Shows Until</label>
+        {{ form.available_till(class_ = 'form-control', placeholder='HH:MM', autofocus = true, value=artist.available_till) }}
+      </div>
+      <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true, value=artist.facebook_link) }}
         </div>
